* Put grep into editor context menu * Put 'Lookup in Index' and 'Goto manpage'   into editor context menu * Put 'Lookup in Index' and 'Search in docs'   into documentation context menu * Implemented 'Run to cursor' in debugger part   and put 'Watch: foo' into editor context menu * Removed lots of code duplication in tools config * Tools can be added by DnD from kicker menu * Some preparations for loading files with a   prescribed encoding

--- a/parts/cppsupport/cppnewclassdlgbase.ui
+++ b/parts/cppsupport/cppnewclassdlgbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>493</width>
-            <height>495</height>
+            <width>484</width>
+            <height>454</height>
         </rect>
     </property>
     <property name="caption">
@@ -26,7 +26,7 @@
             <number>6</number>
         </property>
         <spacer row="2" column="1">
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer11</cstring>
             </property>
             <property name="orientation">
@@ -34,12 +34,6 @@
             </property>
             <property name="sizeType">
                 <enum>Minimum</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
             </property>
         </spacer>
         <widget class="QGroupBox" row="3" column="0">
@@ -152,7 +146,7 @@ a class for the KDE libraries.</string>
             </property>
         </widget>
         <spacer row="4" column="1">
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer12</cstring>
             </property>
             <property name="orientation">
@@ -160,12 +154,6 @@ a class for the KDE libraries.</string>
             </property>
             <property name="sizeType">
                 <enum>Minimum</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
             </property>
         </spacer>
         <widget class="QLayoutWidget" row="5" column="0">
@@ -207,7 +195,7 @@ doxygen or similar tools.</string>
             </vbox>
         </widget>
         <spacer row="5" column="1">
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer6</cstring>
             </property>
             <property name="orientation">
@@ -215,12 +203,6 @@ doxygen or similar tools.</string>
             </property>
             <property name="sizeType">
                 <enum>Preferred</enum>
-            </property>
-            <property name="sizeHint">
-                <size>
-                    <width>20</width>
-                    <height>20</height>
-                </size>
             </property>
         </spacer>
         <widget class="QLayoutWidget" row="5" column="2">
@@ -238,7 +220,7 @@ doxygen or similar tools.</string>
                     <number>6</number>
                 </property>
                 <spacer>
-                    <property name="name" stdset="0">
+                    <property name="name">
                         <cstring>Spacer7</cstring>
                     </property>
                     <property name="orientation">
@@ -246,12 +228,6 @@ doxygen or similar tools.</string>
                     </property>
                     <property name="sizeType">
                         <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
                     </property>
                 </spacer>
                 <widget class="QCheckBox">
@@ -274,7 +250,7 @@ doxygen or similar tools.</string>
                     </property>
                 </widget>
                 <spacer>
-                    <property name="name" stdset="0">
+                    <property name="name">
                         <cstring>Spacer8</cstring>
                     </property>
                     <property name="orientation">
@@ -282,12 +258,6 @@ doxygen or similar tools.</string>
                     </property>
                     <property name="sizeType">
                         <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
                     </property>
                 </spacer>
             </vbox>
@@ -337,7 +307,7 @@ doxygen or similar tools.</string>
                     </property>
                 </widget>
                 <spacer>
-                    <property name="name" stdset="0">
+                    <property name="name">
                         <cstring>Spacer9</cstring>
                     </property>
                     <property name="orientation">
@@ -345,12 +315,6 @@ doxygen or similar tools.</string>
                     </property>
                     <property name="sizeType">
                         <enum>Minimum</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
                     </property>
                 </spacer>
                 <widget class="QCheckBox">
@@ -378,7 +342,7 @@ doxygen or similar tools.</string>
                     <number>6</number>
                 </property>
                 <spacer>
-                    <property name="name" stdset="0">
+                    <property name="name">
                         <cstring>Spacer7_2</cstring>
                     </property>
                     <property name="orientation">
@@ -386,12 +350,6 @@ doxygen or similar tools.</string>
                     </property>
                     <property name="sizeType">
                         <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
                     </property>
                 </spacer>
                 <widget class="QPushButton">
@@ -416,7 +374,7 @@ doxygen or similar tools.</string>
             <property name="name">
                 <cstring>Line1</cstring>
             </property>
-            <property name="frameShape" stdset="0">
+            <property name="frameShape">
                 <enum>HLine</enum>
             </property>
             <property name="frameShadow">
