--- a/parts/qeditor/settingsdialog.ui
+++ b/parts/qeditor/settingsdialog.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>522</width>
-            <height>415</height>
+            <width>412</width>
+            <height>345</height>
         </rect>
     </property>
     <property name="caption">
@@ -34,12 +34,12 @@
             </property>
             <widget class="QWidget">
                 <property name="name">
-                    <cstring>Widget9</cstring>
+                    <cstring>tab</cstring>
                 </property>
                 <attribute name="title">
-                    <string>&amp;Appearance</string>
+                    <string>&amp;Highlighting</string>
                 </attribute>
-                <vbox>
+                <grid>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
@@ -49,9 +49,49 @@
                     <property name="spacing">
                         <number>6</number>
                     </property>
-                    <widget class="QLayoutWidget">
+                    <spacer row="4" column="1">
                         <property name="name">
-                            <cstring>Layout4</cstring>
+                            <cstring>Spacer5</cstring>
+                        </property>
+                        <property name="orientation">
+                            <enum>Vertical</enum>
+                        </property>
+                        <property name="sizeType">
+                            <enum>Expanding</enum>
+                        </property>
+                    </spacer>
+                    <widget class="QLineEdit" row="3" column="0" rowspan="1" colspan="3">
+                        <property name="name">
+                            <cstring>editPreview</cstring>
+                        </property>
+                        <property name="text">
+                            <string>preview</string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="2" column="0">
+                        <property name="name">
+                            <cstring>TextLabel6</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Preview:</string>
+                        </property>
+                    </widget>
+                    <widget class="QLabel" row="0" column="0" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>TextLabel1_2</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Element:</string>
+                        </property>
+                    </widget>
+                    <widget class="QListBox" row="1" column="0" rowspan="1" colspan="2">
+                        <property name="name">
+                            <cstring>listElements</cstring>
+                        </property>
+                    </widget>
+                    <widget class="QLayoutWidget" row="0" column="2" rowspan="2" colspan="1">
+                        <property name="name">
+                            <cstring>Layout9</cstring>
                         </property>
                         <grid>
                             <property name="name">
@@ -63,140 +103,81 @@
                             <property name="spacing">
                                 <number>6</number>
                             </property>
-                            <widget class="QLabel" row="1" column="0">
+                            <widget class="QCheckBox" row="2" column="0" rowspan="1" colspan="2">
                                 <property name="name">
-                                    <cstring>TextLabel2</cstring>
+                                    <cstring>checkBold</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Tab width:</string>
+                                    <string>&amp;Bold</string>
+                                </property>
+                            </widget>
+                            <widget class="QCheckBox" row="3" column="0" rowspan="1" colspan="2">
+                                <property name="name">
+                                    <cstring>checkItalic</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>&amp;Italic</string>
+                                </property>
+                            </widget>
+                            <widget class="QCheckBox" row="4" column="0" rowspan="1" colspan="2">
+                                <property name="name">
+                                    <cstring>checkUnderline</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>&amp;Underline</string>
+                                </property>
+                            </widget>
+                            <widget class="QLabel" row="1" column="0">
+                                <property name="name">
+                                    <cstring>TextLabel3_2</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>Size:</string>
                                 </property>
                             </widget>
                             <widget class="QLabel" row="0" column="0">
                                 <property name="name">
-                                    <cstring>TextLabel1</cstring>
+                                    <cstring>TextLabel2_2</cstring>
                                 </property>
                                 <property name="text">
-                                    <string>Default font:</string>
+                                    <string>Font:</string>
                                 </property>
                             </widget>
-                            <widget class="KIntNumInput" row="1" column="1">
+                            <widget class="KFontCombo" row="0" column="1">
                                 <property name="name">
-                                    <cstring>spinTabWidth</cstring>
+                                    <cstring>comboFontFamily</cstring>
                                 </property>
-                                <property name="value">
-                                    <number>8</number>
+                            </widget>
+                            <widget class="QSpinBox" row="1" column="1">
+                                <property name="name">
+                                    <cstring>spinFontSize</cstring>
                                 </property>
                                 <property name="minValue">
-                                    <number>1</number>
+                                    <number>0</number>
+                                </property>
+                                <property name="value">
+                                    <number>10</number>
                                 </property>
                             </widget>
-                            <spacer row="1" column="2" rowspan="1" colspan="2">
+                            <widget class="KColorButton" row="5" column="1">
                                 <property name="name">
-                                    <cstring>Spacer2</cstring>
+                                    <cstring>buttonColor</cstring>
                                 </property>
-                                <property name="orientation">
-                                    <enum>Horizontal</enum>
-                                </property>
-                                <property name="sizeType">
-                                    <enum>Expanding</enum>
-                                </property>
-                            </spacer>
-                            <widget class="KFontCombo" row="0" column="1" rowspan="1" colspan="2">
-                                <property name="name">
-                                    <cstring>comboDefaultFont</cstring>
+                                <property name="text">
+                                    <string></string>
                                 </property>
                             </widget>
-                            <widget class="QLayoutWidget" row="0" column="3">
+                            <widget class="QLabel" row="5" column="0">
                                 <property name="name">
-                                    <cstring>Layout3</cstring>
+                                    <cstring>TextLabel4</cstring>
                                 </property>
-                                <hbox>
-                                    <property name="name">
-                                        <cstring>unnamed</cstring>
-                                    </property>
-                                    <property name="margin">
-                                        <number>0</number>
-                                    </property>
-                                    <property name="spacing">
-                                        <number>6</number>
-                                    </property>
-                                    <widget class="QLabel">
-                                        <property name="name">
-                                            <cstring>TextLabel3</cstring>
-                                        </property>
-                                        <property name="text">
-                                            <string>Size:</string>
-                                        </property>
-                                    </widget>
-                                    <widget class="KComboBox">
-                                        <property name="name">
-                                            <cstring>KComboBox1</cstring>
-                                        </property>
-                                    </widget>
-                                </hbox>
+                                <property name="text">
+                                    <string>Color:</string>
+                                </property>
                             </widget>
                         </grid>
                     </widget>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>checkReplaceTab</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Replace tab with spaces</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>checkShowMarker</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Show marker border</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>checkShowLineNumber</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Show line number border</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>checkShowCodeFolding</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Show code folding border</string>
-                        </property>
-                    </widget>
-                    <widget class="QCheckBox">
-                        <property name="name">
-                            <cstring>checkHighlightCurrentLine</cstring>
-                        </property>
-                        <property name="text">
-                            <string>Highlight current line</string>
-                        </property>
-                    </widget>
-                    <spacer>
-                        <property name="name">
-                            <cstring>Spacer3</cstring>
-                        </property>
-                        <property name="orientation">
-                            <enum>Vertical</enum>
-                        </property>
-                        <property name="sizeType">
-                            <enum>Expanding</enum>
-                        </property>
-                    </spacer>
-                </vbox>
-            </widget>
-            <widget class="QWidget">
-                <property name="name">
-                    <cstring>tab</cstring>
-                </property>
-                <attribute name="title">
-                    <string>&amp;Highlighting</string>
-                </attribute>
+                </grid>
             </widget>
         </widget>
         <widget class="QLayoutWidget">
@@ -286,8 +267,66 @@
         <receiver>SettingsDialog</receiver>
         <slot>reject()</slot>
     </connection>
+    <connection>
+        <sender>comboFontFamily</sender>
+        <signal>activated(int)</signal>
+        <receiver>SettingsDialog</receiver>
+        <slot>slotUpdatePreview()</slot>
+    </connection>
+    <connection>
+        <sender>spinFontSize</sender>
+        <signal>valueChanged(int)</signal>
+        <receiver>SettingsDialog</receiver>
+        <slot>slotUpdatePreview()</slot>
+    </connection>
+    <connection>
+        <sender>checkBold</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>SettingsDialog</receiver>
+        <slot>slotUpdatePreview()</slot>
+    </connection>
+    <connection>
+        <sender>checkItalic</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>SettingsDialog</receiver>
+        <slot>slotUpdatePreview()</slot>
+    </connection>
+    <connection>
+        <sender>checkUnderline</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>SettingsDialog</receiver>
+        <slot>slotUpdatePreview()</slot>
+    </connection>
+    <connection>
+        <sender>buttonColor</sender>
+        <signal>changed(const QColor&amp;)</signal>
+        <receiver>SettingsDialog</receiver>
+        <slot>slotUpdatePreview()</slot>
+    </connection>
+    <connection>
+        <sender>listElements</sender>
+        <signal>selectionChanged()</signal>
+        <receiver>SettingsDialog</receiver>
+        <slot>slotSelectionChanged()</slot>
+    </connection>
 </connections>
+<tabstops>
+    <tabstop>comboFontFamily</tabstop>
+    <tabstop>tabWidget</tabstop>
+    <tabstop>editPreview</tabstop>
+    <tabstop>listElements</tabstop>
+    <tabstop>checkBold</tabstop>
+    <tabstop>checkItalic</tabstop>
+    <tabstop>checkUnderline</tabstop>
+    <tabstop>spinFontSize</tabstop>
+    <tabstop>buttonColor</tabstop>
+    <tabstop>buttonHelp</tabstop>
+    <tabstop>buttonOk</tabstop>
+    <tabstop>buttonCancel</tabstop>
+</tabstops>
 <includes>
+    <include location="global" impldecl="in declaration">qmap.h</include>
+    <include location="global" impldecl="in declaration">qpair.h</include>
     <include location="local" impldecl="in implementation">settingsdialog.ui.h</include>
 </includes>
 <forwards>
@@ -295,12 +334,15 @@
 </forwards>
 <variables>
     <variable>QEditorPart* m_editor;</variable>
+    <variable>QMap&lt;QString, QPair&lt;QFont, QColor&gt; &gt; m_map;</variable>
 </variables>
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
     <slot>setEditor( QEditorPart * editor )</slot>
     <slot>accept()</slot>
+    <slot>slotUpdatePreview()</slot>
+    <slot>slotSelectionChanged()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
